--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+   
+  <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><a href="http://127.0.0.1:5500/index.html">Amazon</a></title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -9,6 +10,7 @@
 </head>
 <body>
   <header>
+   
     <div class="navbar">
       <div class="nav-logo border">
           <div class="logo">
@@ -102,8 +104,26 @@
             <div class="box-img" style="background-image: url('box8_image.jpg')";> </div>
               <p><a href="https://www.amazon.com/s?k=woman+apparel&_encoding=UTF8&content-id=amzn1.sym.4f5febc6-20d8-4d1d-b839-2647181df110&pd_rd_r=f597759a-0f72-4e7e-b240-07a060ad20da&pd_rd_w=XPvGd&pd_rd_wg=PfODc&pf_rd_p=4f5febc6-20d8-4d1d-b839-2647181df110&pf_rd_r=SZMQ6XPZHHP06MPQT379&ref=pd_hp_d_btf_unk">See more</a></p>
             </div></div>
-</div>
-<footer>
+            <div class=" box"><div class="box-content"> <h2>Men's Watches</h2>
+              <div class="box-img" style="background-image: url('watch.jpg')";> </div>
+                <p><a href="https://www.amazon.com/s?k=men+watches&_encoding=UTF8&content-id=amzn1.sym.db94be39-53f1-4c79-89b2-88aa81be709e&pd_rd_r=4826ee52-83ef-4664-87bf-a778c7bc9020&pd_rd_w=ESxM2&pd_rd_wg=GsX5r&pf_rd_p=db94be39-53f1-4c79-89b2-88aa81be709e&pf_rd_r=JJQ2FCDB7NV68G5Y29AP&ref=pd_hp_d_btf_unk">See more</a></p>
+              </div></div>
+              <div class=" box"><div class="box-content"> <h2>Laptop</h2>
+                <div class="box-img" style="background-image: url('laptop.jpg')";> </div>
+                  <p><a href="https://www.amazon.com/s?k=lpatop&crid=2M8J6FHC0U8ZL&sprefix=lpatop%2Caps%2C323&ref=nb_sb_noss_2">See more</a></p>
+                </div></div>
+                <div class=" box"><div class="box-content"> <h2>Headphones</h2>
+                  <div class="box-img" style="background-image: url('headphone.jpg')";> </div>
+                    <p><a href="https://www.amazon.com/s?k=headphones&crid=HZP02JMIGL2J&sprefix=head%2Caps%2C272&ref=nb_sb_ss_w_hit-vc-lth_headphones_k0_1_4">See more</a></p>
+                  </div></div>
+                  <div class=" box"><div class="box-content"> <h2>Travel bags</h2>
+                    <div class="box-img" style="background-image: url('bag.jpg')";> </div>
+                      <p><a href="https://www.amazon.com/s?k=travel+bags+for+luggage&crid=2KTAIXO4GLA4N&sprefix=travel+bags%2Caps%2C280&ref=nb_sb_ss_ts-doa-p_6_11">See more</a></p>
+                    </div> </div>
+                            
+            
+          </div>
+<footer class="footer-all">
     <div class="footerpanel1">
         Back to top
     </div>
