--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <div class="shop-section"> 
   <div class="box">
    <div class="box-content"> <h2>Clothes</h2>
-    <div class="box-img" style="background-image: url('box1_image.jpg')";> </div>
+    <div class="box-img" style="background-image: url('clothes2.webp')";> </div>
       <p><a href="https://www.amazon.com/s?k=apparel&_encoding=UTF8&content-id=amzn1.sym.4f5febc6-20d8-4d1d-b839-2647181df110&pd_rd_r=479e93c8-c8b3-42c8-92a9-d8b7d64bffe8&pd_rd_w=oDU2V&pd_rd_wg=SKzRM&pf_rd_p=4f5febc6-20d8-4d1d-b839-2647181df110&pf_rd_r=XTFAB8WPD2D3YXY5D8FV&ref=pd_hp_d_btf_unk">See more</a></p>
     </div>
    
@@ -81,11 +81,11 @@
       <p><a href="https://www.amazon.com/s?k=health+and+beauty&i=beauty-intl-ship&_encoding=UTF8&content-id=amzn1.sym.5a1e43ac-8800-488a-812b-a43cf4218174&crid=2036DM6EKNYNA&pd_rd_r=d15cd47c-5941-4b49-9569-f4272a869fd6&pd_rd_w=qJ1lR&pd_rd_wg=ypu1s&pf_rd_p=5a1e43ac-8800-488a-812b-a43cf4218174&pf_rd_r=TX8JECH4ZD7BRTTCE3PJ&sprefix=health+and+beauty%2Cbeauty-intl-ship%2C173&ref=pd_hp_d_atf_unk">See more</a></p>
     </div></div>
   <div class="box"><div class="box-content"> <h2>Furniture</h2>
-    <div class="box-img" style="background-image: url('box3_image.jpg')";> </div>
+    <div class="box-img" style="background-image: url('living-room-showcase-design.jpg')";> </div>
       <p><a href="https://www.amazon.com/s?k=furniture&crid=3EDALSTL9KMN5&sprefix=furniture%2Caps%2C271&ref=nb_sb_noss_1">See more</a></p>
     </div></div>
   <div class="box"><div class="box-content"> <h2>Mobile & Smartphones</h2>
-    <div class="box-img" style="background-image: url('box4_image.jpg')";> </div>
+    <div class="box-img" style="background-image: url('iphone.jpeg')";> </div>
       <p><a href="https://www.amazon.com/s?k=smartphones&_encoding=UTF8&content-id=amzn1.sym.69a935ef-cee6-41d5-aefa-c36bfc7821bc&pd_rd_r=83a50c6a-ab76-49d0-bec6-372f0b13ad02&pd_rd_w=49C5O&pd_rd_wg=Frn8T&pf_rd_p=69a935ef-cee6-41d5-aefa-c36bfc7821bc&pf_rd_r=1A1JY5A177XANWD7ED7D&ref=pd_hp_d_btf_unk">See more</a></p>
     </div></div>
     <div class="box"><div class="box-content"> <h2>Beauty Products</h2>
@@ -100,8 +100,8 @@
           <div class="box-img" style="background-image: url('box7_image.jpg')";> </div>
             <p><a href="https://www.amazon.com/s?k=toys&_encoding=UTF8&content-id=amzn1.sym.be1f9daf-4d19-45c4-80a8-9f43dc62cb2d&crid=1HWN103RHTWMX&pd_rd_r=51c53373-4a8a-4a3f-a570-19f5572e7fc0&pd_rd_w=5dtb6&pd_rd_wg=t07Ie&pf_rd_p=be1f9daf-4d19-45c4-80a8-9f43dc62cb2d&pf_rd_r=SZMQ6XPZHHP06MPQT379&sprefix=toys%2Caps%2C195&ref=pd_hp_d_hero_unk">See more</a></p>
           </div></div>
-          <div class=" box"><div class="box-content"> <h2>Fashion Picks</h2>
-            <div class="box-img" style="background-image: url('box8_image.jpg')";> </div>
+          <div class=" box"><div class="box-content"> <h2>Women Fashion</h2>
+            <div class="box-img" style="background-image: url('fashion.jpg')";> </div>
               <p><a href="https://www.amazon.com/s?k=woman+apparel&_encoding=UTF8&content-id=amzn1.sym.4f5febc6-20d8-4d1d-b839-2647181df110&pd_rd_r=f597759a-0f72-4e7e-b240-07a060ad20da&pd_rd_w=XPvGd&pd_rd_wg=PfODc&pf_rd_p=4f5febc6-20d8-4d1d-b839-2647181df110&pf_rd_r=SZMQ6XPZHHP06MPQT379&ref=pd_hp_d_btf_unk">See more</a></p>
             </div></div>
             <div class=" box"><div class="box-content"> <h2>Men's Watches</h2>
